// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryItem renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        false,
      ]
    }
  >
    label
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textAlign": "right",
            "top": 1,
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "fontWeight": "bold",
            "letterSpacing": 0.16,
            "lineHeight": 23,
            "top": 2,
          },
          false,
          false,
          false,
        ]
      }
    >
      information
    </Text>
  </View>
</View>
`;

exports[`SummaryItem renders correctly for active dispute 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        {
          "color": "#FE5A48",
        },
      ]
    }
  >
    label
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textAlign": "right",
            "top": 1,
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "fontWeight": "bold",
            "letterSpacing": 0.16,
            "lineHeight": 23,
            "top": 2,
          },
          {
            "color": "#B01807",
          },
          false,
          false,
        ]
      }
    >
      information
    </Text>
  </View>
</View>
`;

exports[`SummaryItem renders correctly for bitcoin amount 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        false,
      ]
    }
  >
    amount
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <BTCAmount
      amount={21000}
      isError={false}
      size="small"
    />
  </View>
</View>
`;

exports[`SummaryItem renders correctly for bitcoin amount on small screens 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        false,
      ]
    }
  >
    amount
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <BTCAmount
      amount={21000}
      isError={false}
      size="x small"
    />
  </View>
</View>
`;

exports[`SummaryItem renders correctly for escrow 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        false,
      ]
    }
  >
    escrow
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.14,
              "lineHeight": 22,
              "textAlign": "right",
              "top": 1,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
              "letterSpacing": 0.16,
              "lineHeight": 23,
              "top": 2,
            },
            false,
            {
              "textDecorationLine": "underline",
            },
            false,
          ]
        }
      >
        view in explorer
      </Text>
      <test-file-stub
        fill="#F56522"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "height": 16,
              "width": 16,
            },
            {
              "height": 20,
              "width": 20,
            },
            false,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`SummaryItem renders correctly for escrow with non string information 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        false,
      ]
    }
  >
    escrow
  </Text>
</View>
`;

exports[`SummaryItem renders correctly for not available 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        false,
      ]
    }
  >
    label
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textAlign": "right",
            "top": 1,
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "fontWeight": "bold",
            "letterSpacing": 0.16,
            "lineHeight": 23,
            "top": 2,
          },
          false,
          false,
          {
            "color": "#EAE3DF",
          },
        ]
      }
    >
      information
    </Text>
  </View>
</View>
`;

exports[`SummaryItem renders correctly for not available and active dispute 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        {
          "color": "#FE5A48",
        },
      ]
    }
  >
    label
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textAlign": "right",
            "top": 1,
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "fontWeight": "bold",
            "letterSpacing": 0.16,
            "lineHeight": 23,
            "top": 2,
          },
          {
            "color": "#B01807",
          },
          false,
          {
            "color": "#FFD1CA",
          },
        ]
      }
    >
      information
    </Text>
  </View>
</View>
`;

exports[`SummaryItem renders correctly for should blur 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "height": 30,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#9F8C82",
          "width": 72,
        },
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 18,
          "letterSpacing": 0.18,
          "lineHeight": 29.25,
          "marginRight": 4,
          "width": 78,
        },
        false,
      ]
    }
  >
    label
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textAlign": "right",
            "top": 1,
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "fontWeight": "bold",
            "letterSpacing": 0.16,
            "lineHeight": 23,
            "top": 2,
          },
          false,
          false,
          false,
        ]
      }
    >
      information
    </Text>
    <BlurView
      blurAmount={3}
      blurType="light"
      style={
        [
          {
            "backgroundColor": "transparent",
          },
          {
            "height": "100%",
            "left": -8,
            "position": "absolute",
            "right": -8,
          },
        ]
      }
    />
  </View>
</View>
`;
